# personal-habit-tracker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  habit-tracker.bat  habit-tracker.sh  habit_tracker.py  personal_habit_tracker.py  philosophy.md  pyproject.toml  requirements.txt  test-and-push.bat
.kiro/hooks/: philosophy-review.md
.kiro/specs/personal-habit-tracker-core/: design.md  requirements.md  tasks.md
.kiro/steering/: philosophy-alignment.md
.kiro/templates/: spec-philosophy-check.md
gui/: __init__.py  dialogs.py  gui_design_wireframes.md  gui_habit_tracker.py  main_window.py  widgets.py
tests/: __init__.py  test_base.py  test_gui.py  test_integration.py  test_unit.py
